@@ -6,6 +6,7 @@ Added --copydvd command line parameter
 Do only read MCN and ISRCs when copying an audio cd since scanning them takes a very long time.
 Fixed cdrdao 1.1.8 version handling (no ATAPI warning)
 Fixed crash when using the Audiometadatarenamer on Movix Projects
+Automatically enable UDF extensions in case the project contains files bigger then 2 gb.
 	
 0.11.6
 Fixed length calculation for long FLAC files.
